# PDF-Rag

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: cli.py  config.py  exceptions.py  main.py
app/api/: schemas.py
app/api/v1/: router.py
app/api/v1/routes/: config.py  ingest.py  query.py
app/rag/: chunker.py  embedder.py  pipeline.py  retriever.py  vectorstore.py
app/ui/: index.html
data/: sample.txt
docs/: CNAME  index.html
notebooks/: rag_explorer.ipynb
notebooks/.ipynb_checkpoints/: rag_explorer-checkpoint.ipynb
