[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag"
version = "1.0.0"
description = "Local RAG API — chat with your documents from the browser"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-groq>=0.1.0",
    "langchain-huggingface>=0.0.3",
    "langchain-chroma>=0.1.0",
    "langchain-text-splitters>=0.2.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=2.7.0",
    "pypdf>=4.2.0",
    "pytesseract>=0.3.10",
    "pdf2image>=1.17.0",
    "Pillow>=10.0.0",
    "groq>=0.9.0",
    "aiofiles>=23.0.0",
]

[project.scripts]
rag = "app.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
"app.ui" = ["*.html"]